# public-good-index

./: CLAUDE.md  README.md  hello.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/processed/: city_effectiveness.csv  city_public_good.csv  city_public_good_col_adjusted.csv  city_public_good_detailed.csv  city_spending.csv  city_tax_burden.csv  public_good_detailed.csv  public_good_scores.csv  public_good_scores_col_adjusted.csv  service_effectiveness.csv  spending_breakdown.csv  tax_burden.csv
data/raw/: asfin_2023.xlsx  stc_2024.xlsx
docs/: index.html  report.html
docs/charts/: main.js
docs/charts/data/: city_effectiveness.json  city_public_good.json  city_spending.json  city_tax_burden.json  public_good_scores.json  service_effectiveness.json  spending_breakdown.json  tax_burden.json
notebooks/: 01_tax_burden.ipynb  02_spending_allocation.ipynb  03_service_effectiveness.ipynb  04_public_good_score.ipynb  05_city_tax_burden.ipynb  06_city_spending.ipynb  07_city_effectiveness.ipynb  08_city_public_good.ipynb
scripts/: generate_html.py
src/: city_data_utils.py  data_utils.py
