[project]
name = "corruption-calculator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9.18"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "papermill>=2.6.0",
    "plotly>=5.24.0",
]
